Overflow fix again.

--- a/assets/src/less/core.less
+++ b/assets/src/less/core.less
@@ -15,7 +15,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  overflow: auto;
 }
 
 /* Layout */
